This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
12/3/25: Fixed picking folder for DE frame saving when server is local, broken
11/20, and prevented trying to create frame directory when SerialEM is not
running on DE server computer.

12/3/25: SEM_4-2-13
12/3/25: Fixed setting of frame-saving subdirectory when SerialEM is not
running on DE server computer (In 4.2).

12/2/25: For JEOL, fixed setting aperture size by index and made Get Names in
multigrid dialog recognize which grid is on the stage (In 4.2).

12/1/25: Added a separate property, RealignItemMinAnchorMargin, for the
minimum distance to the edge of a map wanted for preferring an anchor map over
a larger map.

12/1/25: Fixed crash in startup when there is a plugin STEM camera.

11/26/25: Added script command to get all parameters for a low dose area into
an array variable.

11/25/25: Added ability to show STEM channels in multiple, separate windows to
the right of the main window, similar to the side-by-side FFT display.  This
is controlled from a dialog opened from the Window menu.

11/21/25: Added support for Dark mode for K3 cameras.

11/21/25: Fixed frame alignment for DE cameras to account for frames now being
saved at requested subarea size and binning instead of full-sized.

11/21/25: Added support for HDR Counting in DE cameras.

11/20/25: Made it request insertion only once for Gatan cameras and then wait
until inserted; repeated requests wasted time and caused timeouts with K3.

11/20/25: Fixed SEMCCD plugin crashing DM when first saved raw images from K3
are binned by 2 and from a subarea (In 4.2).

11/20/25: Fixed finishing focus ramp for TVIPS STEM, and requesting more than
one channel in continuous mode for FEI STEM through UTAPI (In 4.2).
