@@ -3,6 +3,9 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+12/3/25: Fixed a bug where SetDoseRate using an EDM did not use the correct dose 
+percentage stored in low dose parameters.
+
 12/3/25: Fixed picking folder for DE frame saving when server is local, broken
 11/20, and prevented trying to create frame directory when SerialEM is not
 running on DE server computer.
